added styles to images, body, header and footer

--- a/index.html
+++ b/index.html
@@ -20,19 +20,29 @@
         <section class="layout">
           <ul class="nav">
             <li>
-              <a href="#">Home</a>
+              <a href="#">
+                <i class="fa fa-camera-retro" aria-hidden="true"></i> Home
+              </a>
             </li>
             <li>
-              <a href="#">About us</a>
+              <a href="#">
+                <i class="fa fa-podcast" aria-hidden="true"></i> About us
+              </a>
             </li>
             <li>
-              <a href="#">Speakers</a>
+              <a href="#">
+                <i class="fa fa-superpowers" aria-hidden="true"></i> Speakers
+              </a>
             </li>
             <li>
-              <a href="#">Sponsers</a>
+              <a href="#">
+                <i class="fa fa-grav" aria-hidden="true"></i> Sponsers
+              </a>
             </li>
             <li>
-              <a href="#">Contact Us</a>
+              <a href="#">
+                <i class="fa fa-eercast" aria-hidden="true"></i> Contact Us
+              </a>
             </li>
           </ul>
         </section>
@@ -44,21 +54,25 @@
       <section class="layout">
         <h1>Speaking at the next meeting</h1>
         <div class="speakers">
-          <article class="aritist">
+          <article class="artist">
             <h3>Adil Shetty</h3>
             <p>
-              <a href="#"><img src="images/speakers/adhil-shetty.jpg" alt="some text" class="speaker"></a>
+              <a href="#">
+                <img src="images/speakers/adhil-shetty.jpg" alt="some text" class="speaker">
+              </a>
             </p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quisquam voluptatem porro ut, suscipit reprehenderit atque officia assumenda ipsa. Velit reprehenderit numquam voluptate laboriosam! Amet illo iusto animi, adipisci atque!</p>
           </article>
-          <article class="aritist">
+          <article class="artist">
             <h3>Allyson Burns</h3>
             <p>
-              <a href="#"><img src="images/speakers/allyson-burns.jpg" alt="some text" class="speaker"></a>
+              <a href="#">
+                <img src="images/speakers/allyson-burns.jpg" alt="some text" class="speaker">
+              </a>
             </p>
             <p>Velit obcaecati dolores nihil dolorum assumenda at a debitis, veritatis numquam nobis rerum blanditiis quisquam, ratione recusandae saepe, laborum commodi quibusdam animi sint aliquam. Corporis ab sequi repudiandae, incidunt quaerat.</p>
           </article>
-          <article class="aritist">
+          <article class="artist">
             <h3>Amit Ranbir</h3>
             <p>
               <a href="#">
@@ -96,7 +110,6 @@
         </div>
       </section>
     </footer>
-
     <script src="_/js/script.js" charset="utf-8"></script>
     <script src="http://localhost:35729/livereload.js" charset="utf-8"></script>
   </body>
