empty responsive css project

--- a/index.html
+++ b/index.html
@@ -6,111 +6,9 @@
     <link rel="stylesheet" href="_/css/style.css">
   </head>
   <body>
-    <header>
-      <div class="hero">
-        <section class="layout">
-          <div class="branding">
-            <a href="">
-              <img src="images/logo/customer_cam.png" alt="customer logo">
-            </a>
-          </div>
-        </section>
-      </div>
-      <div class="navigation">
-        <section class="layout">
-          <ul class="nav">
-            <li>
-              <a href="#">
-                <i class="fa fa-camera-retro" aria-hidden="true"></i> Home
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <i class="fa fa-podcast" aria-hidden="true"></i> About us
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <i class="fa fa-superpowers" aria-hidden="true"></i> Speakers
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <i class="fa fa-grav" aria-hidden="true"></i> Sponsers
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <i class="fa fa-eercast" aria-hidden="true"></i> Contact Us
-              </a>
-            </li>
-          </ul>
-        </section>
-      </div>
-    </header>
-
-    <!-- speakers list comes here -->
-    <div class="speakerslist">
-      <section class="layout">
-        <h1>Speaking at the next meeting</h1>
-        <div class="speakers">
-          <article class="artist">
-            <h3>Adil Shetty</h3>
-            <p>
-              <a href="#">
-                <img src="images/speakers/adhil-shetty.jpg" alt="some text" class="speaker">
-              </a>
-            </p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quisquam voluptatem porro ut, suscipit reprehenderit atque officia assumenda ipsa. Velit reprehenderit numquam voluptate laboriosam! Amet illo iusto animi, adipisci atque!</p>
-          </article>
-          <article class="artist">
-            <h3>Allyson Burns</h3>
-            <p>
-              <a href="#">
-                <img src="images/speakers/allyson-burns.jpg" alt="some text" class="speaker">
-              </a>
-            </p>
-            <p>Velit obcaecati dolores nihil dolorum assumenda at a debitis, veritatis numquam nobis rerum blanditiis quisquam, ratione recusandae saepe, laborum commodi quibusdam animi sint aliquam. Corporis ab sequi repudiandae, incidunt quaerat.</p>
-          </article>
-          <article class="artist">
-            <h3>Amit Ranbir</h3>
-            <p>
-              <a href="#">
-                <img src="images/speakers/amit-ranbir.jpg" alt="some text" class="speaker">
-              </a>
-            </p>
-            <p>Commodi eum necessitatibus dolorum doloribus voluptate blanditiis, possimus aut, vitae voluptatem earum, nulla quo. Quod eligendi optio officiis nisi, laboriosam reiciendis libero praesentium saepe inventore, consequuntur nobis quisquam suscipit
-              minus!</p>
-          </article>
-        </div>
-      </section>
-    </div>
-    <!-- end of speakers list -->
-    <footer>
-      <section class="layout">
-        <div class="socialicons">
-          <span class="title">Join the movement:</span>
-          <ul>
-            <li>
-              <a href="http://facebook.com">
-                <img src="images/social/facebook.png" alt="link to facebook" class="icon">
-              </a>
-            </li>
-            <li>
-              <a href="http://twitter.com">
-                <img src="images/social/twitter.png" alt="link to twitter" class="icon">
-              </a>
-            </li>
-            <li>
-              <a href="http://meetup.com">
-                <img src="images/social/meetup.png" alt="link to meetup" class="icon">
-              </a>
-            </li>
-          </ul>
-        </div>
-      </section>
-    </footer>
+    
     <script src="_/js/script.js" charset="utf-8"></script>
+    <!-- script for live reloading -->
     <script src="http://localhost:35729/livereload.js" charset="utf-8"></script>
   </body>
 </html>
